--- a/website/newsletter/212/index.mdx
+++ b/website/newsletter/212/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /212
-title: "This Week In React #212: ..."
+title: "This Week In React #212: Astro, Next.js, Storybook, INP, Virtualization, WebXR, LiveView, Radon, Yoga, Unistyles, gluestack, Expo-Video, Node, Playwright, Prisma, Undici..."
 authors: [slorber]
 date: 12-04-2024
 unlisted: true
@@ -8,7 +8,11 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+This week React developers have either been super grateful, or have been busy spending money on useless things. Luckily, Astro is here to make the headline. We also have 2 great React perf articles.
+
+The React Native ecosystem has been more active, with the official launch of Radon IDE, and many interesting releases.
+
+Node 22.12 is here, with require(esm) the default. There's also a TC39 meeting in progress with ES proposals progressing, but that's for next week!
 
 <!-- truncate -->
 
@@ -96,7 +100,7 @@ A new major version of Astro just dropped. While technically not a pure React fr
 
 **[Radon IDE 1.0](https://ide.swmansion.com/)**
 
-Software Mansion created a VSCode extension (also supporting Cursor) that turns your editor into a fully fledged IDE for React Native and Expo. It’s now officially launched as a stable version. It’s a paid product, but considering the low price and the DX improvement, it’s a no-brainer. Take a look at the [Radon IDE launch video](https://www.youtube.com/watch?v=07Un9EfE8D4) to have a quick overview of the features: simulators panel and settings, debugging, click-to-inspect, URL-driven navigation, storybook integration, and more.
+Software Mansion created a VSCode extension (also supporting Cursor) that turns your editor into a fully fledged IDE for React Native and Expo. It’s now officially launched as a stable version. It’s a paid product, but considering the low price and the DX improvement, it’s a no-brainer that also supports the company's great open source efforts. Take a look at the [Radon IDE launch video](https://www.youtube.com/watch?v=07Un9EfE8D4) to have a quick overview of the features: simulators panel and settings, debugging, click-to-inspect, URL-driven navigation, storybook integration, and more.
 
 ---
 
