--- a/website/newsletter/212/index.mdx
+++ b/website/newsletter/212/index.mdx
@@ -7,7 +7,7 @@ date: 12-04-2024
 
 Hi everyone!
 
-This week React developers have either been super grateful, or have been busy spending money on useless things. Luckily, Astro is here to make the headline. We also have 2 great React perf articles.
+This week React developers have either been super grateful or busy spending money on useless things. Luckily, Astro is here to make the headline. We also have 2 great React perf articles.
 
 The React Native ecosystem has been more active, with the official launch of Radon IDE, and many interesting releases.
 
