--- a/website/newsletter/212/index.mdx
+++ b/website/newsletter/212/index.mdx
@@ -11,7 +11,7 @@ This week React developers have either been super grateful or busy spending mone
 
 The React Native ecosystem has been more active, with the official launch of Radon IDE, and many interesting releases.
 
-Node 22.12 is here, with require(esm) the default. There's also a TC39 meeting in progress with ES proposals progressing, but that's for next week!
+Node 22.12 is here, with `require(esm)` enabled by default in LTS! There's also a TC39 meeting in progress with ES proposals progressing, but that's for next week!
 
 <!-- truncate -->
 
