--- a/website/newsletter/213/index.mdx
+++ b/website/newsletter/213/index.mdx
@@ -8,9 +8,14 @@ unlisted: true
 
 Hi everyone!
 
+REPLACE STREAM BANNER
+REPLACE STREAM BANNER
+REPLACE STREAM BANNER
+REPLACE STREAM BANNER
+
 <Todo />
 
-*   🗓️ [React-Africa](https://react-africa.com/?utm_source=thisweekinreact) - 🇲🇦 Casablanca - 29 November - POST-MENTION
+- 🗓️ [React-Africa](https://react-africa.com/?utm_source=thisweekinreact) - 🇲🇦 Casablanca - 29 November - POST-MENTION
 
 <!-- truncate -->
 
