--- a/website/newsletter/213/index.mdx
+++ b/website/newsletter/213/index.mdx
@@ -3,7 +3,6 @@ slug: /213
 title: "This Week In React #213: React 19, Next.js, React Compiler, React Router, Restyle, Lingui, State of RN, Uniffi, Shared Objects, Fast IO, Sheet Transitions, Radon IDE, TC39, OpenAuth, Dioxus..."
 authors: [slorber]
 date: 12-11-2024
-unlisted: true
 ---
 
 Hi everyone!
@@ -17,13 +16,6 @@ The State of React Native 2024 survey is live. Don’t miss your chance to shape
 There’s also exciting progress in using Rust for frontend apps with tools like Uniffi for React Native and Dioxus, paving the way for more powerful, cross-platform experiences.
 
 Let’s dive in! 🚀
-
-REPLACE STREAM BANNER
-REPLACE STREAM BANNER
-REPLACE STREAM BANNER
-REPLACE STREAM BANNER
-
-<Todo />
 
 <!-- truncate -->
 
@@ -83,10 +75,10 @@ Related videos covering the release:
 
 - 💸 [React Bricks – the Visual CMS for React got more accessible with lower entry price and flexible pay-as-you-go options. Start for free!](https://www.reactbricks.com/?utm_source=twir&utm_campaign=ql24)
 - 📖 [A new React Router tutorial](https://reactrouter.com/tutorials/address-book): It goes over most of the features you’ll need in \~30 minutes
+- 📜 [How React Compiler Performs on Real Code](https://www.developerway.com/posts/how-react-compiler-performs-on-real-code): Enabling the compiler on a real app led to same performance on initial load, and improved performance on interactions. But the compiler is not always able to fully optimize your existing code.
 - 📜 [Ref Callbacks, React 19 and the Compiler](https://tkdodo.eu/blog/ref-callbacks-react-19-and-the-compiler): TkDodo looks into ref callbacks, which now have cleanup functions. When should they replace `useEffect` ?
 - 📜 [Building Scalable Micro-Frontends with Next.js Multi Zones](https://techhub.iodigital.com/articles/building-scalable-micro-frontends-with-next-js-multi-zones): Being able to deploy independently is a major advantage for big teams, and it turns out it’s not that complicated with Next.js
 - 📜 [Root Element API in waku](https://waku.gg/blog/root-element-api): Customize `<html>`, `<body>` and `<head>` in a `\_root.tsx` file
-- 📜 [How React Compiler Performs on Real Code](https://www.developerway.com/posts/how-react-compiler-performs-on-real-code)
 - 📜 [Multi-framework docs with Astro Starlight](https://blog.arcjet.com/multi-framework-docs-with-astro-starlight/)
 - 📜 [SSR is not expensive](https://t3.gg/blog/post/ssr-is-not-expensive)
 - 📜 [Reflections on managing state](https://www.frontendundefined.com/posts/monthly/react-state-management-reflections/)
@@ -101,7 +93,7 @@ Related videos covering the release:
 
 ## 💸 Sponsor {#sponsor2}
 
-[![From solo to collaborative: React + Stream Video!](/emails/issues/213/Stream.png)](https://getstream.io/video/sdk/react/tutorial/video-calling/?utm_source=newsletter&utm_medium=referral&utm_content=&utm_campaign=thisweekinreact)
+[![From solo to collaborative: React + Stream Video!](/emails/issues/213/stream.jpg)](https://getstream.io/video/sdk/react/tutorial/video-calling/?utm_source=newsletter&utm_medium=referral&utm_content=&utm_campaign=thisweekinreact)
 
 **[From solo to collaborative: React + Stream Video!](https://getstream.io/video/sdk/react/tutorial/video-calling/?utm_source=newsletter&utm_medium=referral&utm_content=&utm_campaign=thisweekinreact)**
 
