--- a/website/newsletter/213/index.mdx
+++ b/website/newsletter/213/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /213
-title: "This Week In React #213: React 19, Next.js, React Compiler, React Router, Restyle, Lingui, State of RN, Uniffi, Shared Objects, Fast IO, Sheet Transitions, Radon IDE, TC39, OpenAuth, Dioxus..."
+title: "This Week In React #213: React 19, Next.js, React Compiler, React Router, Restyle, Lingui, State of RN, Uniffi, Shared Objects, Fast IO, Sheet Transitions, Radon, TC39, OpenAuth, Dioxus..."
 authors: [slorber]
 date: 12-11-2024
 ---
