--- a/website/newsletter/213/index.mdx
+++ b/website/newsletter/213/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /213
-title: "This Week In React #213: React 19, Next.js, React Compiler, React Router, Restyle, Lingui, State of RN, Uniffi, Shared Objects, Fast IO, Sheet Transitions, Radon, TC39, OpenAuth, Dioxus..."
+title: "This Week In React #213: React 19, Next.js, React Compiler, React Router, Restyle, Lingui, State of RN, Uniffi, Shared Objects, Fast IO, Sheet Transitions, Radon, TC39, OpenAuth, TypeScript, Dioxus..."
 authors: [matthieugicquel, cyrilbo]
 date: 12-11-2024
 ---
@@ -138,6 +138,7 @@ The State of React Native 2024 survey is live\! 📊 This is your chance to infl
 ## 🔀 Other {#other}
 
 - 📜 [TC39 105th meeting](https://dev.to/hemanth/updates-from-the-105th-tc39-meeting-3gkh): several ES proposals progressed this week including Intl.DurationFormat, Immutable ArrayBuffer, Import Sync and more.
+- 📜 [Airtable - Scaling TypeScript to thousands of projects](https://medium.com/airtable-eng/a-leap-in-the-evolution-of-airtables-codebase-scaling-typescript-to-thousands-of-projects-734326c3a553)
 - 📜 [Node.js Delivers First LTS with require(esm) Enabled, Enhances Security and Release Automation](https://socket.dev/blog/node-js-delivers-first-lts-with-require-esm-enabled)
 - 📜 [Solving N² Complexity with JavaScript Maps](https://davidbonan.io/blog/solving-n2-complexity-with-javascript-maps)
 - 📜 [CSS Wrapped 2024](https://chrome.dev/css-wrapped-2024/)
